--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,6 +1,14 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+
+// variables
+$gray-light: #777;
+$gray-medium-light: #eaeaea
+$gray: #555;
+$gray-darker: #222222;
+
+
 /* universal */
 body {
     padding-top: 60px;
@@ -13,10 +21,11 @@ textarea {
 }
 .center {
     text-align: center;
+    h1 {
+        margin-bottom: 10px;
+    }
 }
-.center h1 {
-    margin-bottom: 10px;
-}
+
 
 h1, h2, h3, h4, h5, h6 {
     line-height: 1;
@@ -35,7 +44,7 @@ h2 {
     margin-bottom: 30px;
     text-align: center;
     font-weight: normal;
-    color: #777;
+    color: $gray-light;
 }
 
 p {
@@ -54,13 +63,38 @@ p {
     letter-spacing: -1px;
     padding-top: 9px;
     font-weight: bold;
+    &:hover {
+        color:#fff;
+        text-decoration: none;
+    }
 }
 
-#logo:hover {
-    color: #fff;
-    text-decoration: none;
-}
+// img {
+//     display: none;
+// }
 
-img {
-    display: none;
+// footer
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 1px solid #eaeaea;
+    color: $gray-light;
+    a{
+        color: $gray;
+        &:hover {
+            color: $gray-darker;
+        }
+    }
+    small {
+        float: left;
+    }
+    ul {
+        float: right;
+        list-style: none;
+        li {
+            float: left;
+            margin-left: 15px;
+        }
+    }
 }
