fix bug with $gray

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,7 +4,7 @@
 
 // variables
 $gray-light: #777;
-$gray-medium-light: #eaeaea
+$gray-medium-light: #eaeaea;
 $gray: #555;
 $gray-darker: #222222;
 
